@@ -19,6 +19,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #24580: Symbolic group references to open group in re patterns now are
+  explicitly forbidden as well as numeric group references.
+
 - Issue #24206: Fixed __eq__ and __ne__ methods of inspect classes.
 
 - Issue #24631: Fixed regression in the timeit module with multiline setup.
